Fix regression that added 32 DIP of extra padding to pre-Harmony dialogs.

This was caused by https://codereview.chromium.org/2664073006 , which
unintentionally changed the top inset returned by GetDialogButtonInsets() in
pre-Harmony from 0 to 20.  This restores the previous 0 value.

I looked for a better way to do this, but the code in dialog_client_view.cc is
insane, and it turns out even if it's made not-insane, pre-Harmony would still
want a different value for this top inset than the other three insets.  So the
fix here would be needed roughly as-is anyway, it's just that I could write a
better comment for it.

BUG=687842
TEST=none

Review-Url: https://codereview.chromium.org/2682583002
Cr-Commit-Position: refs/heads/master@{#448800}

Former-commit-id: 56590952b66adf4b8da32623e3111cb8781c918e